--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,16 +4,129 @@
 </div>
 
 <div class="row">
-    <div class="col s12">
+    <div class="col s12 m10 offset-m1 l8 offset-l2 xl6 offset-xl3">
         <div class="card-panel">
-            <table>
-                {{#each user}}
-                    <tr>
-                        <th>{{@key}}</th>
-                        <td>{{this}}</td>
-                    </tr>
-                {{/each}}
-            </table>
+            {{#if user}}
+                <div class="row">
+                    <!--<div class="col m3 s4">-->
+                        <!--<img src="/images/sample_profile.jpg" alt="profile picture" class="circle responsive-img">-->
+                        <!--<img src="/images/logos/sole-graphic-logo-small.png" alt="profile picture placeholder">-->
+                    <!--</div>-->
+                    <div class="col s12 center-align">
+                        <h4 class="hide-on-med-and-down">{{user.firstName}} {{user.lastName}}</h4>
+                        <h3 class="hide-on-large-only">{{user.firstName}} {{user.lastName}}</h3>
+                        <!--<p>South High Community School</p>-->
+                    </div>
+                </div>
+
+                <div class="row">
+                    <hr>
+                    <!--<div class="col l4 s12 center-align">3 CEUs</div>-->
+                    <!--<div class="col l4 s12 center-align"><h5>1500/2000 points to next CEU</h5></div>-->
+                    <!--<div class="col l4 s12 center-align"><h5>15 completed SOLEs</h5></div>-->
+                </div>
+            <form id="profile-update-form" action="/profile" method="post">
+                <input type="hidden" name="sesh" value="{{sesh}}">
+                <!--role-->
+                <div class="row">
+                    <div class="input-field col s12 m8 offset-m2 l6 offset-l3">
+                        <select name="role">
+                            {{#unless user.role}}<option value="" disabled>Choose your option</option>{{/unless}}
+                            <option value="user.role.teacher" {{#ifEquals user.role "user.role
+                                .teacher"}}selected{{/ifEquals}}>Teacher</option>
+                            <option value="user.role.preservice_teacher" {{#ifEquals user.role "user.role
+                                .preservice_teacher"}}selected{{/ifEquals}}>Pre-service Teacher</option>
+                            <option value="user.role.administrator" {{#ifEquals user.role "user.role
+                                .administrator"}}selected{{/ifEquals}}>Administrator</option>
+                            <option value="user.role.coach" {{#ifEquals user.role "user.role
+                                .coach"}}selected{{/ifEquals}}>Coach</option>
+                            <option value="user.role.out_of_school_educator" {{#ifEquals user.role "user.role
+                                .out_of_school_educator"}}selected{{/ifEquals}}>Out of School Educator</option>
+                            <option value="user.role.parent" {{#ifEquals user.role "user.role
+                                .parent"}}selected{{/ifEquals}}>Parent</option>
+                            <option value="user.role.other" {{#ifEquals user.role "user.role
+                                .other"}}selected{{/ifEquals}}>Other</option>
+                        </select>
+                        <label>What's your primary role?</label>
+                    </div>
+                </div>
+                <!--grades-->
+                <div class="row">
+                    <div class="input-field col s12 m8 offset-m2 l6 offset-l3">
+                        <select multiple name="grade">
+                            {{#unless user.grades}}<option value="" disabled>Choose your option</option>{{/unless}}
+                            <option value="edu.pre-k" {{#contains "edu.pre-k" user.grades}}selected{{/contains}}>Preschool</option>
+                            <option value="edu.k" {{#contains "edu.k" user.grades}}selected{{/contains}}>Kindergarten</option>
+                            <option value="edu.1" {{#contains "edu.1" user.grades}}selected{{/contains}}>First
+                                Grade</option>
+                            <option value="edu.2" {{#contains "edu.2" user.grades}}selected{{/contains}}>Second
+                                Grade</option>
+                            <option value="edu.3" {{#contains "edu.3" user.grades}}selected{{/contains}}>Third
+                                Grade</option>
+                            <option value="edu.4" {{#contains "edu.4" user.grades}}selected{{/contains}}>Fourth
+                                Grade</option>
+                            <option value="edu.5" {{#contains "edu.5" user.grades}}selected{{/contains}}>Fifth
+                                Grade</option>
+                            <option value="edu.6" {{#contains "edu.6" user.grades}}selected{{/contains}}>Sixth
+                                Grade</option>
+                            <option value="edu.7" {{#contains "edu.7" user.grades}}selected{{/contains}}>Seventh
+                                Grade</option>
+                            <option value="edu.8" {{#contains "edu.8" user.grades}}selected{{/contains}}>Eighth
+                                Grade</option>
+                            <option value="edu.9" {{#contains "edu.9" user.grades}}selected{{/contains}}>Ninth
+                                Grade</option>
+                            <option value="edu.10" {{#contains "edu.10" user.grades}}selected{{/contains}}>Tenth
+                                Grade</option>
+                            <option value="edu.11" {{#contains "edu.11" user.grades}}selected{{/contains}}>Eleventh Grade</option>
+                            <option value="edu.12" {{#contains "edu.12" user.grades}}selected{{/contains}}>Twelfth
+                                Grade</option>
+                        </select>
+                        <label>What grade(s) do you teach?</label>
+                    </div>
+                </div>
+                <!--subjects-->
+                <div class="row">
+                    <div class="input-field col s12 m8 offset-m2 l6 offset-l3">
+                        <select multiple name="subject">
+                            {{#unless user.subjects}}<option value="" disabled>Choose your option</option>{{/unless}}
+                            <option value="top.careereducation" {{#contains "top.careereducation" user.subjects}}selected{{/contains}}>Career Education</option>
+                            <option value="top.engineering" {{#contains "top.engineering" user.subjects}}selected{{/contains}}>Engineering</option>
+                            <option value="top.english" {{#contains "top.english" user.subjects}}selected{{/contains}}>English</option>
+                            <option value="top.englishlanguagedevelopment" {{#contains "top.englishlanguagedevelopment" user.subjects}}selected{{/contains}}>English Language Development</option>
+                            <option value="top.financialliteracy" {{#contains "top.financialliteracy" user.subjects}}selected{{/contains}}>Financial Literacy</option>
+                            <option value="top.foreignlanguage" {{#contains "top.foreignlanguage" user.subjects}}selected{{/contains}}>Foreign Language</option>
+                            <option value="top.health" {{#contains "top.health" user.subjects}}selected{{/contains}}>Health</option>
+                            <option value="top.libmedia-infolit" {{#contains "top.libmedia-infolit" user.subjects}}selected{{/contains}}>Library Media / Information Literacy</option>
+                            <option value="top.lifeskills" {{#contains "top.lifeskills" user.subjects}}selected{{/contains}}>Life Skills</option>
+                            <option value="top.math" {{#contains "top.math" user.subjects}}selected{{/contains}}>Math</option>
+                            <option value="top.physicaleducation" {{#contains "top.physicaleducation" user.subjects}}selected{{/contains}}>Physical Education</option>
+                            <option value="top.science" {{#contains "top.science" user.subjects}}selected{{/contains}}>Science</option>
+                            <option value="top.socialstudies" {{#contains "top.socialstudies" user.subjects}}selected{{/contains}}>Social Studies</option>
+                            <option value="top.technology" {{#contains "top.technology" user.subjects}}selected{{/contains}}>Technology</option>
+                            <option value="top.thearts" {{#contains "top.thearts" user.subjects}}selected{{/contains}}>The Arts</option>
+                        </select>
+                        <label>What subject(s) do you teach?</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <input type="submit" value="Save" class="waves-effect waves-light btn">
+                </div>
+            </form>
+
+            {{else}}
+                Hmm.... looks like something went wrong.
+            {{/if}}
         </div>
     </div>
 </div>
+
+
+<!--<table>-->
+    <!--{{#each user}}-->
+        <!--<tr>-->
+            <!--<th>{{@key}}</th>-->
+            <!--<td>{{this}}</td>-->
+        <!--</tr>-->
+    <!--{{/each}}-->
+<!--</table>-->
