when explore question changes, remove all children

--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -135,7 +135,7 @@
 
 {{!-- this is a handlebars template for the dropdown for tags --}}
 <script id="standard-picker-template" type="text/x-handlebars-template">
-  <div id="picker-\{{index}}" class="input-field col s12 m6">
+  <div class="input-field col s12 m6">
     <!-- <label for="refine-\{{rdn}}" class="active">Domain</label> -->
     <select class="browser-default new-standard-picker" onchange="itChanged($(this))" >
       <option value=""></option>
